--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-The start of something great!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jonathan Bestwick</title>
+</head>
+<body>
+
+    <h1>Jonathan Bestwick</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium magnam molestias iste quam numquam voluptates, ipsam neque totam inventore cum animi cumque obcaecati, quasi deserunt doloremque accusamus alias, harum veritatis.</p>
+    
+</body>
+</html>
