--- a/index.html
+++ b/index.html
@@ -1,15 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"
+        integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf"
+        crossorigin="anonymous"></script>
+
+    <style>
+        #main {
+            padding: 30px 0;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+    </style>
+
     <title>Jonathan Bestwick</title>
 </head>
+
 <body>
 
-    <h1>Jonathan Bestwick</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium magnam molestias iste quam numquam voluptates, ipsam neque totam inventore cum animi cumque obcaecati, quasi deserunt doloremque accusamus alias, harum veritatis.</p>
-    
+    <div id="main">
+
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h1>Jonathan Bestwick</h1>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium magnam molestias iste quam
+                        numquam voluptates, ipsam neque totam inventore cum animi cumque obcaecati, quasi deserunt
+                        doloremque accusamus alias, harum veritatis.</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
 </body>
+
 </html>
