Align buttons left

--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
             background: transparent;
         }
 
+        .btn{
+            text-align: left !important;
+        }
+
         .btn-link, a{
             color: #19712c !important;
         }
