--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                     <a name="tertiary"></a>
                     <h2>Tertiary Qualifications</h2>
                     <ul>
-                        <li>UNISA Bachelors of Arts degree in Psychological Counselling - 2014</li>
+                        <li>UNISA Bachelor of Arts degree in Psychological Counselling - 2014</li>
                         <li>UNISA Bachelor of Arts Honours - Applied Psychology (post graduate) - 2017</li>
                     </ul>
                 </div>
@@ -359,7 +359,7 @@
                                             <li>Handgun</li>
                                             <li>Rifle</li>
                                             <li>Shotgun</li>
-                                            <li>Carbine/Self-loading rifl</li>
+                                            <li>Carbine/Self-loading rifle</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -444,10 +444,7 @@
                                         wonderfully rewarding challenge. It is a privilege to serve our Christian
                                         Camping industry and to have the opportunity to travel to other African
                                         countries to represent CCSA and to assist with association building and
-                                        training. Leading CCSA through these corona affected times hasn the importance
-                                        and impact of personal relationship building within our members as we have
-                                        sought to be there for sites that have had to close and members who have lost
-                                        their jobs over this difficult time.</p>
+                                        training. Leading CCSA through these corona affected times has highlighted the importance and impact of personal relationship building within our membership as we have sought to be there for sites that have had to close and members who have lost their jobs over this difficult time.</p>
                                 </div>
                             </div>
                         </div>
@@ -467,7 +464,7 @@
                                 <div class="card-body">
                                     <p>CSCBG was created to provide “buy in” power to Christian Camp sites and has a
                                         structure of rebates that directly financially support CCSA. Wonderfully lead
-                                        and run b y Werner du Plessis, my role as board member is to keep the
+                                        and run by Werner du Plessis, my role as board member is to keep the
                                         accountability through all transactions, to support Werner in vision,
                                         encouragement and decision making and to help ensure future growth of this
                                         developing initiative.</p>
@@ -489,11 +486,9 @@
                                 data-parent="#accordionTwo">
                                 <div class="card-body">
                                     <p>Lead and managed by Chris Eksteen this company was set up to raise funds for
-                                        Christian camps and environmental awareness programming. Its specific focus was
-                                        to ethically approach, pitch, propose and tender to mega funders such as
-                                        national Lotteries to fund and sponsor camping programmes. My role as board
-                                        member was to ensure accountability and to support Chris Eksteen directly in an
-                                        advisory capacity.</p>
+                                        Christian camps and environmental awareness programming. Its specific focus was to ethically approach, pitch, propose and tender to mega funders such as
+                                        National Lotteries to fund and sponsor camping programmes. My role as board
+                                        member was to ensure accountability and to support Chris Eksteen directly in an advisory capacity.</p>
                                 </div>
                             </div>
                         </div>
